// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`suggest basic show and hide Case 0 different parent block 1`] = `"doc(paragraph(suggest_slash("/check")))"`;

exports[`suggest basic show and hide Case 1 different parent block 1`] = `"doc(paragraph("hello ", suggest_slash("/check")))"`;

exports[`suggest basic show and hide Case 2 different parent block 1`] = `"doc(paragraph("hello"), paragraph("hello"), paragraph("hello ", suggest_slash("/check")))"`;

exports[`suggest basic show and hide Case 3 different parent block 1`] = `"doc(bulletList(listItem(paragraph("hello ", suggest_slash("/check")))))"`;

exports[`suggest basic show and hide Case 4 different parent block 1`] = `"doc(bulletList(listItem(paragraph("hello ", suggest_slash("/check")))))"`;

exports[`suggest basic show and hide Case 5 different parent block 1`] = `"doc(orderedList(listItem(paragraph("hello ", suggest_slash("/check")))))"`;

exports[`suggest basic show and hide Case 6 different parent block 1`] = `"doc(blockquote(heading("hello ", suggest_slash("/check"))))"`;

exports[`suggest basic show and hide Case 7 different parent block 1`] = `"doc(blockquote(heading("hello")), paragraph(suggest_slash("/check")))"`;

exports[`suggest basic show and hide types a trigger 1`] = `
<div
  data-testid="test-editor"
>
  <div
    class="ProseMirror bangle-editor content"
    contenteditable="true"
    translate="no"
  >
    <p>
      foobar 
      <span
        data-bangle-name="suggest_slash"
        data-suggest-trigger="/"
        style="color: #005893"
      >
        /check
      </span>
    </p>
  </div>
  <div
    class="bangle-tooltip"
    data-popper-placement="top"
    data-show=""
    role="tooltip"
    style="position: absolute; left: 0px; top: 0px; margin: 0px; bottom: 0px; transform: translate(0px, 0px);"
  >
    <div
      class="bangle-tooltip-content"
    />
  </div>
</div>
`;

exports[`suggest basic show and hide when no trigger 1`] = `
<div
  data-testid="test-editor"
>
  <div
    class="ProseMirror bangle-editor content"
    contenteditable="true"
    translate="no"
  >
    <p>
      foobar
    </p>
  </div>
  <div
    class="bangle-tooltip"
    role="tooltip"
  >
    <div
      class="bangle-tooltip-content"
    />
  </div>
</div>
`;
